feat: add sophon testnet RPC

--- a/.env.secrets.example
+++ b/.env.secrets.example
@@ -34,3 +34,4 @@ RPC_URL_ANCIENT8=https://rpc-testnet.ancient8.gg
 RPC_URL_IMMUTABLE_TESTNET=https://rpc.testnet.immutable.com
 RPC_URL_SEPOLIA=https://1rpc.io/sepolia
 RPC_URL_MUMBAI=https://endpoints.omniatech.io/v1/matic/mumbai/public
+RPC_URL_SOPHON_TESTNET=https://rpc.testnet.sophon.xyz
